# video-viewer

./: .gitignore  CLAUDE.md  LICENSE  README.md  requirements.txt  run_viewer.sh  setup.py
doc/: walkthrough.md
rust/: Cargo.toml  sideband_schema.toml
rust/src/: app.rs  lib.rs  main.rs
rust/src/analysis/: block_stats.rs  histogram.rs  isp_sideband.rs  metrics.rs  mod.rs  motion.rs  scene.rs  vectorscope.rs  waveform.rs
rust/src/conversion/: converter.rs
rust/src/core/: cache.rs  colorspace.rs  formats.rs  hints.rs  mod.rs  pixel.rs  ppm.rs  reader.rs  sideband.rs  y4m.rs
rust/src/ui/: canvas.rs  comparison.rs  dialogs.rs  mod.rs  navigation.rs  settings.rs  sideband_overlay.rs  sidebar.rs  toolbar.rs
rust/tests/: block_stats_test.rs  cache_test.rs  colorspace_test.rs  converter_extra_test.rs  converter_test.rs  diff_stats_test.rs  formats_extra_test.rs  formats_test.rs  highbit_test.rs  hints_test.rs  histogram_test.rs  image_test.rs  integration_test.rs  metrics_test.rs  motion_test.rs  pixel_packed_test.rs  pixel_test.rs  ppm_test.rs  reader_test.rs  scene_test.rs  sideband_test.rs  vectorscope_test.rs  waveform_test.rs  y4m_test.rs
scripts/: build_windows_release.sh  generate_test_data.py
test/: test_advanced.py  test_analysis.py  test_cli_integration.py  test_comparison_view.py  test_conversion_matrix.py  test_errors.py  test_export.py  test_filename_hints.py  test_formats_comprehensive.py  test_main_window.py  test_pixel_inspector.py  test_suite.py  test_video_reader.py
test_data/: test_qcif.i420  test_qcif.nv12  test_qcif.rgb565  test_qcif.yuyv
(+15 files in other folders)
